[gd_scene load_steps=9 format=3 uid="uid://ndt4j3nllqqc"]

[ext_resource type="Script" uid="uid://cc32que4wdhhd" path="res://main_scenes/battle/battle_scene.gd" id="1_idkgt"]
[ext_resource type="Script" uid="uid://cvqnem8u5ofqf" path="res://main_scenes/battle/battle_manager.gd" id="2_kinr6"]
[ext_resource type="Texture2D" uid="uid://c4h5pnag3nuuj" path="res://assets/cursor_possibility2.png" id="3_8qdv8"]
[ext_resource type="Texture2D" uid="uid://5q7mnw2daf0f" path="res://assets/cursor_possibility3.png" id="4_pxwbd"]
[ext_resource type="Script" uid="uid://nvc0prbgjvq0" path="res://main_scenes/battle/ai_manager.gd" id="5_pxwbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idkgt"]
bg_color = Color(0.912271, 4.71681e-06, 6.73831e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kinr6"]
bg_color = Color(0.151483, 0.695413, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rca61"]
bg_color = Color(0, 0, 0, 0.917647)

[node name="BattleScene" type="Node2D" node_paths=PackedStringArray("camera", "battle_manager")]
z_index = 3
script = ExtResource("1_idkgt")
camera = NodePath("Camera2D")
battle_manager = NodePath("BattleManager")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -345.0
offset_top = -201.0
offset_right = 336.0
offset_bottom = 194.0

[node name="BattleManager" type="Control" parent="." node_paths=PackedStringArray("battle_scene", "ai_manager", "move_1", "move_5", "fight")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_kinr6")
battle_scene = NodePath("..")
flee_chance = 1.0
ai_manager = NodePath("AIManager")
move_1 = NodePath("UI/ButtonsHbox/Moves1/Move1")
move_5 = NodePath("UI/ButtonsHbox/Moves2/Move5")
fight = NodePath("UI/ButtonsHbox/Options/Fight")

[node name="AIManager" type="Node" parent="BattleManager" node_paths=PackedStringArray("battle_scene")]
script = ExtResource("5_pxwbd")
battle_scene = NodePath("../..")

[node name="UI" type="Control" parent="BattleManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Field" type="Control" parent="BattleManager/UI"]
layout_mode = 2
anchors_preset = 0
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 56.0

[node name="HBoxContainer" type="Control" parent="BattleManager/UI/Field"]
z_index = 4
anchors_preset = 0
offset_left = 5.0
offset_top = 51.0
offset_right = 641.0
offset_bottom = 198.0

[node name="TopNames" type="Control" parent="BattleManager/UI/Field"]
unique_name_in_owner = true
visible = false
z_index = 2
custom_minimum_size = Vector2(0, 20)
layout_mode = 3
anchors_preset = 0
offset_top = 4.0
offset_right = 640.0
offset_bottom = 24.0

[node name="Name1" type="Panel" parent="BattleManager/UI/Field/TopNames"]
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_right = 225.0
offset_bottom = 25.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="BattleManager/UI/Field/TopNames/Name1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "name"

[node name="MarginContainer" type="MarginContainer" parent="BattleManager/UI/Field/TopNames"]
layout_mode = 2
offset_left = 229.0
offset_right = 411.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="EnemyName1" type="Panel" parent="BattleManager/UI/Field/TopNames"]
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_left = 415.0
offset_right = 640.0
offset_bottom = 25.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="BattleManager/UI/Field/TopNames/EnemyName1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "name"

[node name="TopBars" type="Control" parent="BattleManager/UI/Field"]
unique_name_in_owner = true
visible = false
z_index = 2
custom_minimum_size = Vector2(0, 20)
layout_mode = 3
anchors_preset = 0
offset_top = 31.0
offset_right = 640.0
offset_bottom = 51.0

[node name="Bar1" type="ProgressBar" parent="BattleManager/UI/Field/TopBars"]
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_right = 225.0
offset_bottom = 27.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_idkgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_kinr6")
value = 100.0

[node name="MarginContainer" type="MarginContainer" parent="BattleManager/UI/Field/TopBars"]
layout_mode = 2
offset_left = 229.0
offset_right = 411.0
offset_bottom = 27.0
size_flags_horizontal = 3

[node name="EnemyBar1" type="ProgressBar" parent="BattleManager/UI/Field/TopBars"]
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_left = 415.0
offset_right = 640.0
offset_bottom = 27.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_idkgt")

[node name="BottomBars" type="Control" parent="BattleManager/UI/Field"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
anchors_preset = 0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 212.0

[node name="Bar2" type="ProgressBar" parent="BattleManager/UI/Field/BottomBars"]
z_index = 1
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_right = 225.0
offset_bottom = 27.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_idkgt")

[node name="MarginContainer" type="MarginContainer" parent="BattleManager/UI/Field/BottomBars"]
z_index = 1
layout_mode = 2
offset_left = 229.0
offset_right = 411.0
offset_bottom = 27.0
size_flags_horizontal = 3

[node name="EnemyBar2" type="ProgressBar" parent="BattleManager/UI/Field/BottomBars"]
z_index = 1
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_left = 415.0
offset_right = 640.0
offset_bottom = 27.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_idkgt")

[node name="BottomNames" type="Control" parent="BattleManager/UI/Field"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
anchors_preset = 0
offset_top = 220.0
offset_right = 640.0
offset_bottom = 240.0

[node name="Name2" type="Panel" parent="BattleManager/UI/Field/BottomNames"]
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_right = 225.0
offset_bottom = 25.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="BattleManager/UI/Field/BottomNames/Name2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "name"

[node name="MarginContainer" type="MarginContainer" parent="BattleManager/UI/Field/BottomNames"]
layout_mode = 2
offset_left = 229.0
offset_right = 411.0
offset_bottom = 25.0
size_flags_horizontal = 3

[node name="EnemyName2" type="Panel" parent="BattleManager/UI/Field/BottomNames"]
custom_minimum_size = Vector2(225, 25)
layout_mode = 2
offset_left = 415.0
offset_right = 640.0
offset_bottom = 25.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="BattleManager/UI/Field/BottomNames/EnemyName2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "name"

[node name="SingleBattle" type="Control" parent="BattleManager/UI/Field"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = 180.0
offset_right = 360.0
offset_bottom = 220.0

[node name="Player" type="ColorRect" parent="BattleManager/UI/Field/SingleBattle"]
z_index = 2
custom_minimum_size = Vector2(192, 192)
layout_mode = 0
offset_left = -304.0
offset_top = -180.0
offset_right = -112.0
offset_bottom = 12.0
color = Color(5.19812e-06, 0, 0.921522, 1)

[node name="Enemy" type="ColorRect" parent="BattleManager/UI/Field/SingleBattle"]
z_index = 2
custom_minimum_size = Vector2(192, 192)
layout_mode = 0
offset_left = 114.0
offset_top = -180.0
offset_right = 306.0
offset_bottom = 12.0
color = Color(1, 1, 0, 1)

[node name="DoubleBattle" type="Control" parent="BattleManager/UI/Field"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DoubleBattlePlayer" type="Control" parent="BattleManager/UI/Field/DoubleBattle"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Monster1" type="ColorRect" parent="BattleManager/UI/Field/DoubleBattle/DoubleBattlePlayer"]
z_index = -1
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1.0
offset_top = 43.0
offset_right = 129.0
offset_bottom = 171.0
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="Monster2" type="ColorRect" parent="BattleManager/UI/Field/DoubleBattle/DoubleBattlePlayer"]
z_index = -1
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 96.0
offset_top = 74.0
offset_right = 224.0
offset_bottom = 202.0

[node name="DoubleBattleEnemy" type="Control" parent="BattleManager/UI/Field/DoubleBattle"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Monster1" type="ColorRect" parent="BattleManager/UI/Field/DoubleBattle/DoubleBattleEnemy"]
z_index = -1
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 416.0
offset_top = 41.0
offset_right = 544.0
offset_bottom = 169.0
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="Monster2" type="ColorRect" parent="BattleManager/UI/Field/DoubleBattle/DoubleBattleEnemy"]
z_index = -1
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 511.0
offset_top = 72.0
offset_right = 639.0
offset_bottom = 200.0

[node name="Targets" type="Control" parent="BattleManager/UI/Field"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Target1" type="TextureButton" parent="BattleManager/UI/Field/Targets" groups=["target"]]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 32.0
offset_right = 100.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2
texture_pressed = ExtResource("3_8qdv8")
texture_hover = ExtResource("4_pxwbd")
texture_focused = ExtResource("4_pxwbd")
stretch_mode = 0

[node name="Target2" type="TextureButton" parent="BattleManager/UI/Field/Targets" groups=["target"]]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
offset_left = 106.0
offset_top = 80.0
offset_right = 216.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2
texture_pressed = ExtResource("3_8qdv8")
texture_hover = ExtResource("4_pxwbd")
texture_focused = ExtResource("4_pxwbd")
stretch_mode = 0

[node name="Target3" type="TextureButton" parent="BattleManager/UI/Field/Targets" groups=["target"]]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
offset_left = 424.0
offset_top = 54.0
offset_right = 534.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2
texture_pressed = ExtResource("3_8qdv8")
texture_hover = ExtResource("4_pxwbd")
texture_focused = ExtResource("4_pxwbd")
stretch_mode = 0

[node name="Target4" type="TextureButton" parent="BattleManager/UI/Field/Targets" groups=["target"]]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
offset_left = 521.0
offset_top = 77.0
offset_right = 631.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2
texture_pressed = ExtResource("3_8qdv8")
texture_hover = ExtResource("4_pxwbd")
texture_focused = ExtResource("4_pxwbd")
stretch_mode = 0

[node name="ButtonsHbox" type="HBoxContainer" parent="BattleManager/UI"]
layout_mode = 2
offset_left = -320.0
offset_top = 68.0
offset_right = 320.0
offset_bottom = 180.0

[node name="Options" type="GridContainer" parent="BattleManager/UI/ButtonsHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Item" type="Button" parent="BattleManager/UI/ButtonsHbox/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "Item
"

[node name="Fight" type="Button" parent="BattleManager/UI/ButtonsHbox/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "Fight
"

[node name="Run" type="Button" parent="BattleManager/UI/ButtonsHbox/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "Run
"

[node name="Party" type="Button" parent="BattleManager/UI/ButtonsHbox/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "Party
"

[node name="Moves1" type="GridContainer" parent="BattleManager/UI/ButtonsHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Move1" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon1"

[node name="Move2" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon1"

[node name="Move3" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon1"

[node name="Move4" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon1"

[node name="Moves2" type="GridContainer" parent="BattleManager/UI/ButtonsHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Move5" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon2"

[node name="Move6" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon2"

[node name="Move7" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon2"

[node name="Move8" type="Button" parent="BattleManager/UI/ButtonsHbox/Moves2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
text = "mon2"

[node name="Dialogue" type="Panel" parent="BattleManager/UI/ButtonsHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Items" type="Panel" parent="BattleManager/UI"]
unique_name_in_owner = true
visible = false
z_index = 2
custom_minimum_size = Vector2(300, 125)
layout_mode = 0
offset_left = -313.0
offset_top = -116.0
offset_right = -13.0
offset_bottom = -76.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rca61")

[node name="ItemList" type="ItemList" parent="BattleManager/UI/Items"]
unique_name_in_owner = true
z_index = 2
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
allow_search = false
item_count = 10
fixed_column_width = 140
item_0/text = "item a"
item_1/text = "item b"
item_2/text = "item c"
item_3/text = "item "
item_4/text = "item "
item_5/text = "item "
item_6/text = "item "
item_7/text = "item "
item_8/text = "item "
item_9/text = "item "

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true

[connection signal="target_requested" from="BattleManager" to="." method="get_target"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Options/Item" to="BattleManager" method="_on_item_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Options/Fight" to="BattleManager" method="_on_fight_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Options/Run" to="BattleManager" method="_on_run_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Options/Party" to="BattleManager" method="_on_party_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves1/Move1" to="BattleManager" method="_on_move_1_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves1/Move2" to="BattleManager" method="_on_move_2_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves1/Move3" to="BattleManager" method="_on_move_3_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves1/Move4" to="BattleManager" method="_on_move_4_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves2/Move5" to="BattleManager" method="_on_move_5_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves2/Move6" to="BattleManager" method="_on_move_6_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves2/Move7" to="BattleManager" method="_on_move_7_pressed"]
[connection signal="pressed" from="BattleManager/UI/ButtonsHbox/Moves2/Move8" to="BattleManager" method="_on_move_8_pressed"]
